Changed html, added float button(relative located button). Device identificator added too.

--- a/app/src/main/assets/template.html
+++ b/app/src/main/assets/template.html
@@ -4,12 +4,17 @@
     <title>%s</title>
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="origin" content="%s">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway:400,300,600"
           type="text/css">
     <link rel="stylesheet" href="../css/normalize.css" type="text/css">
     <link rel="stylesheet" href="../css/skeleton.css" type="text/css">
     <link rel="stylesheet" href="../css/custom.css" type="text/css">
+    <link rel="stylesheet" href="../css/float-button.css" type="text/css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"
+          type="text/css">
     <script type="text/javascript"
             src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="../js/color-thief.min.js"></script>
@@ -58,6 +63,27 @@
         <h3 class="section-heading">Комментарии</h3>
         <!--//TODO: write shadow for quote-->
         %s
+    </div>
+</div>
+<div id="container-floating">
+    <div class="nd5 nds" data-toggle="tooltip" data-placement="left"
+         data-original-title="Simone"></div>
+    <div class="nd4 nds" data-toggle="tooltip" data-placement="left"
+         data-original-title="contract@gmail.com"><img class="reminder">
+        <p class="letter">C</p>
+    </div>
+    <div class="nd3 nds" data-toggle="tooltip" data-placement="left" data-original-title="Reminder">
+        <img class="reminder"
+             src="//ssl.gstatic.com/bt/C3341AA7A1A076756462EE2E5CD71C11/1x/ic_reminders_speeddial_white_24dp.png"/>
+    </div>
+    <div class="nd1 nds" data-toggle="tooltip" data-placement="left"
+         data-original-title="Edoardo@live.it"><img class="reminder">
+        <p class="letter">E</p>
+    </div>
+
+    <div id="floating-button" data-toggle="tooltip" data-placement="left"
+         data-original-title="Create">
+        <i class="zmdi zmdi-cloud-download zmdi-hc-2x"></i>
     </div>
 </div>
 </body>
